--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "leaflet": "^1.8.0",
+    "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
+    "ra-data-json-server": "^4.2.7",
     "react": "^18.2.0",
+    "react-admin": "^4.2.7",
+    "react-big-calendar": "^1.5.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
